fixed firefox card alignment

--- a/frontend/src/app/pointing/room-cards/room-cards.component.scss
+++ b/frontend/src/app/pointing/room-cards/room-cards.component.scss
@@ -44,8 +44,6 @@
 
 			.number-card {
 				display: grid;
-				height: 100%;
-				width: 100%;
 			}
 
 			/* .card-rectangles {
@@ -77,6 +75,7 @@
 				grid-column: 1;
 				grid-row: 1;
 				opacity: 0.7;
+				width: 100%;
 				height: 100%;
 			}
 
